--- a/#source/styles.scss
+++ b/#source/styles.scss
@@ -187,6 +187,7 @@ main {
     display: flex;
     align-items: stretch;
     gap: 12px;
+    display: none;
     .image {
       flex: 0 1 84px;
       height: 64px;
@@ -235,6 +236,12 @@ main {
     align-items: center;
     justify-content: center;
     transition: 0.3s;
+  }
+
+  &._active {
+    .preview {
+      display: flex;
+    }
   }
 
   &.is-dragover {
@@ -286,6 +293,65 @@ main {
     .calendar {
       opacity: 1;
       visibility: visible;
+    }
+  }
+}
+
+.subtusk_cont {
+  max-width: 500px;
+}
+
+.subtask {
+  .input_desc {
+    input {
+      width: 100%;
+      padding: 8px 0;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 145%;
+      color: #1e1f2c;
+      display: block;
+      border: none;
+      border-bottom: 1px solid #1e1f2c1e;
+    }
+  }
+  .values {
+    .subtask_added {
+      display: flex;
+      align-items: center;
+      padding: 9px 0;
+      border-bottom: 1px solid #1e1f2c1e;
+      .icon {
+        margin-right: 10px;
+      }
+      .text {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #1e1f2c;
+        opacity: 0.7;
+      }
+    }
+  }
+
+  .add_subtask_button {
+    cursor: pointer;
+    margin-top: 15px;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 124%;
+    letter-spacing: -0.01em;
+    color: #1e1f2c;
+
+    padding: 8px 15px 8px 10px;
+    border: 1px solid rgba(30, 31, 44, 0.3);
+    border-radius: 10px;
+    span {
+      opacity: 0.6;
     }
   }
 }
@@ -502,5 +568,260 @@ main {
       font-weight: 400;
       color: #1e1f2c;
     }
+  }
+}
+
+.coment_container {
+  max-width: 500px;
+}
+
+.comment_section {
+  display: flex;
+  align-items: center;
+  padding: 25px 30px;
+
+  background: #f1eff8;
+  border-top: 1px solid #f8f7ff;
+  .coment {
+    font-weight: 400;
+    font-size: 15px;
+    letter-spacing: -0.02em;
+    color: #1e1f2c82;
+    span {
+      padding-left: 14px;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 18px;
+      letter-spacing: 0.01em;
+      color: #1e1f2c;
+    }
+  }
+  .last {
+    margin-left: auto;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    color: #1e1f2c;
+    opacity: 0.5;
+    margin-right: 25px;
+  }
+  .arrow {
+    opacity: 0.5;
+    cursor: pointer;
+  }
+  &._dark {
+    background: #dedae9;
+    border-top: 1px solid #f8f7ff;
+  }
+
+  &._reverse {
+    .arrow {
+      order: 1;
+      transform: scale(-1, 1);
+    }
+
+    .coment,
+    .last {
+      order: 2;
+      margin-right: 0;
+    }
+  }
+}
+
+.task_container {
+  display: flex;
+}
+
+.task_desc {
+  box-shadow: 0 0 20px #0002;
+  align-items: stretch;
+  display: flex;
+  max-width: 560px;
+  .left_part {
+    padding: 20px 30px;
+    flex: 0 0 560px;
+    width: 560px;
+    .task_desc_header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+
+      .icon {
+        margin-right: 12px;
+      }
+      .title {
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 124%;
+        letter-spacing: -0.01em;
+        color: #0b0c17;
+      }
+      .flag {
+        margin-left: auto;
+      }
+    }
+    .task_desc_ass {
+      display: flex;
+      align-items: center;
+    }
+    .task_desc_ass_2 {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+    }
+    .textarea {
+      margin-top: 30px;
+      .textarea_title {
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 145%;
+        color: #1e1f2c;
+        margin-bottom: 5px;
+      }
+      .textarea_body {
+        p {
+          font-weight: 400;
+          font-size: 15px;
+          line-height: 132%;
+          color: #1e1f2c;
+          margin-bottom: 20px;
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+    }
+    .files_input {
+      margin-top: 30px;
+    }
+
+    .input_desc {
+      margin-top: 30px;
+    }
+
+    .comment_section {
+      margin: 130px -30px -20px;
+    }
+  }
+  .right_part {
+    padding: 20px;
+    flex: 0 0 320px;
+    background: #f1eff8;
+    display: none;
+  }
+
+  .textarea {
+    .tox {
+      height: 200px !important;
+      width: 100%;
+    }
+  }
+
+  &._not_disabled {
+    .task_desc_header {
+      .icon,
+      .title {
+        display: none;
+      }
+
+      .input_title {
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 124%;
+        letter-spacing: -0.01em;
+        color: #0b0c17;
+        opacity: 0.5;
+        border: none;
+      }
+    }
+  }
+
+  &._disabled {
+    .task_desc_header {
+      .input_title {
+        display: none;
+      }
+    }
+  }
+
+  &._active {
+    max-width: 880px;
+    .right_part {
+      display: flex;
+    }
+  }
+  &._reverse {
+    flex-direction: row-reverse;
+  }
+}
+
+.coments {
+  display: flex;
+  flex-direction: column;
+  .comments_header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 124%;
+    letter-spacing: -0.04em;
+    color: #1e1f2c;
+    margin-bottom: 40px;
+  }
+  .comments {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    gap: 15px;
+    .upper_part {
+      display: flex;
+      align-items: center;
+      .img {
+        flex: 0 0 30px;
+        margin-right: 6px;
+        img {
+          border-radius: 50%;
+        }
+      }
+      .text {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: 0.01em;
+        color: #1e1f2c7e;
+        span {
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 17px;
+          color: #1e1f2c;
+        }
+      }
+    }
+    .comment {
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 124%;
+      color: #1e1f2c;
+      padding: 5px 0 0 35px;
+    }
+  }
+  .comments_footer {
+    margin-top: auto;
+  }
+}
+
+.input_coment {
+  input {
+    padding: 9px 15px 9px 0px;
+    background: #dedae9;
+    border-radius: 12px 12px 0px 12px;
+    border: none;
+    padding: 15px 20px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    color: #1e1f2c;
   }
 }
